add styles, scripts

--- a/source/sass/main.sass
+++ b/source/sass/main.sass
@@ -1,3 +1,11 @@
 @import "variables.sass";
 @import "fonts.sass";
 @import "blocks/page.sass"
+@import "blocks/intro.sass"
+@import "blocks/video.sass"
+@import "blocks/product.sass"
+@import "blocks/form.sass"
+@import "blocks/page-footer.sass"
+@import "blocks/main-nav.sass"
+@import "blocks/site-list.sass"
+@import "blocks/page-header.sass"
