--- a/source/sass/variables.sass
+++ b/source/sass/variables.sass
@@ -2,6 +2,7 @@
 
 $basic-black: #192632
 $basic-red: #FC0000
+$dark-red: #B90303
 $basic-grey: #F1F1F1
 $basic-sand: #F1E7D4
 $basic-light-brown: #BDB199
@@ -9,5 +10,5 @@ $basic-light-brown: #BDB199
 //Viewports
 
 $tablet-width: 768px
-$desktop-width: 1440px
+$desktop-width: 1366px
 $mobile-width-only: 767px
