--- a/source/sass/blocks/page.sass
+++ b/source/sass/blocks/page.sass
@@ -1,24 +1,22 @@
 body
-  min-width: 370px
+  min-width: 375px
   margin: 0
   padding: 0
   font-family: TT Commons Trial
   font-weight: 400
   font-style: normal
-
-
+  overflow-x: hidden
+  
 a
   text-decoration: none
-
 
 img
   max-width: 100%
   height: auto
 
-
 .page
   height: 100%
-
+  overflow-x: hidden
 
 .visually-hidden
   position: absolute
@@ -30,7 +28,6 @@ img
   clip: rect(0 0 0 0)
   overflow: hidden
 
-
 .container
   width: 355px
   margin: 0 auto
@@ -41,5 +38,5 @@ img
     padding: 0 30px
 
   @media (min-width: $desktop-width)
-    width: 1220px
-    padding: 0 110px
+    width: 1246px
+    padding: 0 60px
