add menu visibility

--- a/source/sass/blocks/site-list.sass
+++ b/source/sass/blocks/site-list.sass
@@ -41,6 +41,7 @@
 
 @media (min-width: $desktop-width) 
   .site-list__link--sticky
+    opacity: 1
     color: #FFFFFF
     &:hover
         color: $basic-red
